# shortcap

./: .gitignore  LICENSE  MANIFEST.in  README.md  justfile  pyproject.toml  requirements.txt  setup.py
scripts/: publish.sh
shortcap/: __init__.py  add_captions.py  cli.py  config.py  emojis.py  segment_parser.py  storage.py  temp  text_renderer.py  transcriber.py  translate.py  utils.py
