[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shortcap"
version = "1.0.1"
description = "Add Automatic Captions to Short Videos with AI"
readme = "README.md"
authors = [
    { name = "SmartClipAI", email = "jacky.xbb@gmail.com" },
    { name = "newtondotcom", email = "asphalt9fr@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "argostranslate>=1.9.6",
    "minio>=7.2.7",
    "moviepy==1.0.3",
    "whisperx",
]

[project.urls]
Homepage = "https://github.com/newtondotcom/shortcap"

[project.scripts]
shortcap = "shortcap.cli:main"

[tool.setuptools.package-data]
shortcap = [
    "assets/*",
    "assets/fonts/*",
    "assets/fonts/*.ttf"
]

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "ruff>=0.11.6",
]
